# exec-suid

./: Cargo.toml  Dockerfile  README.md  exec-suid.c  exec.c  flake.nix
.github/workflows/: ci.yml
src/: main.rs
tests/: conftest.py  test_argv.py  test_environ.py  test_ids.py  test_interpreters.py  test_programs.py  test_programs.yml  test_secure_path.py  test_umask.py
tests/programs/: test_bash  test_opt_environ_all  test_opt_environ_none  test_opt_real  test_python  test_python_argv0_absolute_path  test_python_argv0_relative_path  test_python_as_root_suid  test_python_empty_env  test_python_euid  test_python_fds  test_python_opt_real  test_sh
